5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1662_2974.log
== TEST (2019-04-15 14:16:16) 
-- CODE:
x=float(input("acai no copo: "))
s=int(input("salgados: "))
v=float(input("valor pago em dinheiro: "))
if(v>x+s):
	print("Sim")
else:
	print("Nao")
print(x+s)	
-- OUTPUT:
Nao
501.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:37) 
-- CODE:
x=float(input("acai no copo: "))
s=int(input("salgados: "))
v=float(input("valor pago em dinheiro: "))
if(v>x+s):
	print("Sim")
else:
	print("Nao")
print(round(x+s,2))	
-- OUTPUT:
Nao
501.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:18:04) 
-- CODE:
x=float(input("acai no copo: ")*24*1000)
s=int(input("salgados: ")*3)
v=float(input("valor pago em dinheiro: "))
if(v>x+s):
	print("Sim")
else:
	print("Nao")
print(round(x+s,2))	

-- EXECUTION TIME:
0.220507
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
Nao
inf
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
Nao
222.0
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
Nao
inf
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:19:08) 
-- CODE:
x=float(input("acai no copo: ")*1000/24)
s=int(input("salgados: ")*3)
v=float(input("valor pago em dinheiro: "))
if(v>x+s):
	print("Sim")
else:
	print("Nao")
print(round(x+s,2))	

-- EXECUTION TIME:
0.230544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2974/main.py", line 1, in <module>
    x=float(input()*1000/24)
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:11) 
-- CODE:
x=float(input("acai no copo: ")*1000/24)
s=int(input("salgados: ")*3)
v=float(input("valor pago em dinheiro: "))
if(v>x+s):
	print("Sim")
else:
	print("Nao")
print(round(x+s,2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input()*1000/24)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:21:48) 
-- CODE:
x=float(input("acai no copo: "))
s=int(input("salgados: "))
v=float(input("valor pago em dinheiro: "))
x1=x*24/1000
y1=s*3
t=x1+y1
if(v>x1+y2):
	print("Sim")
else:
	print("Nao")
print(round(t,2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(v>x1+y2):
NameError: name 'y2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:22:14) 
-- CODE:
x=float(input("acai no copo: "))
s=int(input("salgados: "))
v=float(input("valor pago em dinheiro: "))
x1=x*24/1000
y1=s*3
t=x1+y1
if(v>x1+y1):
	print("Sim")
else:
	print("Nao")
print(round(t,2))	

-- EXECUTION TIME:
0.10924
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
Sim
15.0
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
Sim
6.0
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
Nao
4.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:16) 
-- CODE:
x=float(input("acai no copo: "))
s=int(input("salgados: "))
v=float(input("valor pago em dinheiro: "))
x1=x*24/1000
y1=s*3
t=x1+y1
if(v>x1+y1):
	print("Sim")
else:
	print("Nao")
print(round(t,2))	

-- OUTPUT:
Sim
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:48) 
-- CODE:
x=float(input("acai no copo: "))
s=int(input("salgados: "))
v=float(input("valor pago em dinheiro: "))
x1=x*24/1000
y1=s*3
t=x1+y1
print(round(t,2))
if(v>x1+y1):
	print("Sim")
else:
	print("Nao")

-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:22:57) 
-- CODE:
x=float(input("acai no copo: "))
s=int(input("salgados: "))
v=float(input("valor pago em dinheiro: "))
x1=x*24/1000
y1=s*3
t=x1+y1
print(round(t,2))
if(v>x1+y1):
	print("Sim")
else:
	print("Nao")

-- EXECUTION TIME:
0.132453
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
